Add a "make install" target that does something that could be right. The header shall live under include/CL/clew.h for now as this is inline with what glew does.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,3 +22,10 @@ add_library(clew src/clew.c include/clew.h)
 
 add_executable(testclew clewTest/clewTest.cpp include/clew.h)
 target_link_libraries(testclew clew ${CMAKE_DL_LIBS})
+
+install(TARGETS clew
+  LIBRARY DESTINATION lib COMPONENT libraries
+  ARCHIVE DESTINATION lib/static COMPONENT libraries)
+
+INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/clew.h
+  DESTINATION include/CL)
